# Strange-room

./: .gitignore  README.md  index.html  next.config.ts  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json
electron/: electron.d.ts  main.js  preload.js
server/: index.js  package-lock.json  package.json  signaling-server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/join/[id]/: page.tsx
src/app/peer/: page.tsx
src/app/room/[id]/: page.tsx
src/components/: ChatRoom.tsx  Providers.tsx  home.tsx
src/components/Chat/: ChatBox.tsx
src/components/Editor/: MonacoEditor.tsx
src/components/Room/: RoomHeader.tsx  RoomLayout.tsx  UserList.tsx
src/components/Whiteboard/: Canvas.tsx
src/css/: messages.css
src/hooks/: useCountdown.ts  useRoom.ts  useYjs.ts
src/lib/crypto/: e2e-crypto.ts
src/lib/room/: invite.ts  room-manager.ts
src/lib/server/: api.ts
src/lib/utils/: hash.ts
src/lib/yjs/: y-doc.ts
src/types/: electron.d.ts  room.ts  yjs.ts
ws/: package-lock.json  package.json  server.js
